--- a/prj2-sol/package.json
+++ b/prj2-sol/package.json
@@ -2,14 +2,15 @@
   "dependencies": {
     "@types/chai": "^5.0.0",
     "@types/mocha": "^10.0.8",
-    "@types/node": "^22.6.2",
+    "@types/node": "^22.7.7",
     "chai": "^5.1.1",
     "cs544-js-utils": "file:cs544-js-utils.tgz",
     "cs544-node-utils": "file:cs544-node-utils.tgz",
     "mocha": "^10.7.3",
     "mongodb": "^6.9.0",
     "shx": "^0.3.4",
-    "typescript": "^5.6.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3",
     "zod": "^3.23.8"
   },
   "scripts": {
