--- a/prj3-sol/tsconfig.json
+++ b/prj3-sol/tsconfig.json
@@ -3,10 +3,12 @@
     "rootDir": "src/",
     "outDir": "./dist",
     "allowJs": true,
-    "module": "esnext",
-    "moduleResolution": "node",
+    //"module": "esnext",
+    //"moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution":"NodeNext",
     "lib": [
-      "esnext",
+      "ESNext",
     ],
     "baseUrl": ".",
     "target": "esnext",
