--- a/prj3-sol/package.json
+++ b/prj3-sol/package.json
@@ -35,6 +35,7 @@
     "@types/semver": "^7.5.8",
     "@types/supertest": "^6.0.2",
     "mongodb-memory-server": "^10.1.2",
+    "nodemon": "^3.1.7",
     "supertest": "^7.0.0"
   }
 }
